implemented full text search into java
